# voicesign

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
tests/: benchmark_robustness.py  test_codec_survival.py  test_crypto.py  test_integration.py  test_sync.py  test_voicesign.py
voicesign/: __init__.py  cli.py  core.py  crypto.py  sync.py
